# UAV-Digital-Twin

./: README.html  README.md  license.txt
src/digitaltwin/: CMakeLists.txt  digitaltwin.perspective  package.xml  setup.cfg  setup.py
src/digitaltwin/digitaltwin/: UAV.py  graphicalmodel.py  planner.py  utils.py
src/digitaltwin/inputfiles/: UAVconfig.json
src/digitaltwin/launch/: digitaltwin_launch.py  digitaltwin_launch_gui.py  digitaltwin_launch_gui_logger.py
src/digitaltwin/msg/: ControlA.msg  ControlP.msg  ControlPList.msg  Reward.msg  Sensor.msg  SensorList.msg  State.msg  StateList.msg
src/digitaltwin/nodes/: asset.py  logger.py  twin.py
src/digitaltwin/outputfiles/: logfile.json
src/rqt_control/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/rqt_control/resource/: rqt_control.ui
src/rqt_control/scripts/: rqt_control
src/rqt_control/src/rqt_control/: ROScontrol.py
src/rqt_network/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/rqt_network/scripts/: rqt_network
src/rqt_network/src/rqt_network/: ROSnetwork.py
src/rqt_reward/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
src/rqt_reward/resource/: rqt_reward.ui
src/rqt_reward/scripts/: rqt_reward
src/rqt_reward/src/rqt_reward/: ROSreward.py
src/rqt_sensor/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/rqt_sensor/resource/: rqt_sensor.ui
src/rqt_sensor/scripts/: rqt_sensor
src/rqt_sensor/src/rqt_sensor/: ROSsensor.py
src/rqt_state/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/rqt_state/resource/: rqt_state.ui
src/rqt_state/scripts/: rqt_state
src/rqt_state/src/rqt_state/: ROSstate.py
src/rqt_trajectory/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/rqt_trajectory/resource/: rqt_trajectory.ui
src/rqt_trajectory/scripts/: rqt_trajectory
src/rqt_trajectory/src/rqt_trajectory/: ROStrajectory.py
