<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>digitaltwin</name>
  <version>0.0.1</version>
  <description>Package for Digital Twin Graphical Model</description>
  <maintainer email="mkapteyn@mit.edu">michaelkapteyn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
