<package format="2">
    <name>rqt_network</name>
    <version>0.1.0</version>
    <description>
      This is a simple rqt-based GUI for displaying networks as matplotlib figures.
    </description>
  <maintainer email="mkapteyn@mit.edu">Michael Kapteyn</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_plot</url>
  <url type="repository">https://github.com/ros-visualization/rqt_plot</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_plot/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-catkin-pkg-modules</exec_depend>
  <exec_depend version_gte="0.2.25">qt_gui_py_common</exec_depend>
  <exec_depend>xdot</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
